removing ambiguous name, adding more test, fixing minor issues